--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -127,3 +127,31 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+// Global Styles
+$mainColor: #eaeaea;
+$secondaryColor: #fff;
+
+$borderColor: #c1c1c1;
+
+$mainText: black;
+$secondaryText: #4b5156;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong {
+  color: $secondaryText;
+}
+
+p,
+li,
+span,
+label,
+input,
+textarea {
+  color: $mainText;
+}
