--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -160,8 +160,9 @@ h5,
 h6,
 strong {
   color: $mainText;
-  padding: 0.7em 0;
+  padding: 0.5em 0;
   font-family: "Russo One", sans-serif;
+  font-weight: 500;
 }
 
 // Secondary text color
@@ -172,7 +173,7 @@ label,
 input,
 textarea {
   color: $secondaryText;
-  font-size: 1.5em;
+  font-size: 1em;
   font-family: "Roboto Mono", monospace;
 }
 
