--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,9 +3,16 @@ $mainColor: #eaeaea;
 $secondaryColor: #fff;
 // Border Colors
 $borderColor: #c1c1c1;
+$themeDotBorder: #24292e;
 // Text Colors
 $mainText: black;
 $secondaryText: #4b5156;
+
+// preview background color
+$previewBg: rgba(251, 249, 243, 0.8);
+
+// preview shadow
+$previewShadow: #f0ead6;
 
 // Mobile view
 $mobileView: 1200px;
