--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -180,6 +180,7 @@ textarea {
   color: $secondaryText;
   font-size: 1em;
   font-family: "Roboto Mono", monospace;
+  line-height: 1.5em;
 }
 
 // Global section styles
