--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,5 +14,8 @@ $previewBg: rgba(251, 249, 243, 0.8);
 // preview shadow
 $previewShadow: #f0ead6;
 
+//Button Color
+$buttonColor: black;
+
 // Mobile view
 $mobileView: 1200px;
