--- a/components/sectionContact/SectionContact.module.scss
+++ b/components/sectionContact/SectionContact.module.scss
@@ -1,6 +1,14 @@
 @import "../../styles/variables.scss";
 
-section.s4 {
+.s4 {
+  display: grid;
+  justify-content: center;
+  align-items: center;
   background-color: $secondaryColor;
   border-bottom: 1px solid $borderColor;
+
+  h3 {
+    text-align: center;
+    padding: 2em;
+  }
 }
