--- a/components/sectionPortfolio/SectionPortfolio.module.scss
+++ b/components/sectionPortfolio/SectionPortfolio.module.scss
@@ -3,4 +3,9 @@
 section.s3 {
   background-color: $mainColor;
   border-bottom: 1px solid $borderColor;
+
+  h3 {
+    padding-top: 2em;
+    text-align: center;
+  }
 }
