--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,9 @@
 // Background Colors
 $mainColor: #eaeaea;
+$testColor: (
+  "lightMode": #eaeaea,
+  "blueMode": blue
+);
 $secondaryColor: #fff;
 // Border Colors
 $borderColor: #c1c1c1;
