--- a/components/infoWrapper/InfoWrapper.module.scss
+++ b/components/infoWrapper/InfoWrapper.module.scss
@@ -1,9 +1,10 @@
+@use 'sass:map';
 @import "../../styles/variables.scss";
 @import "../../styles//mixins.scss";
 
 .infoWrapper {
-  background-color: $secondaryColor;
-  border: 1px solid $borderColor;
+  // background-color: $secondaryColor;
+  // border: 1px solid $borderColor;
   border-radius: 5px 5px 0 0;
 
   @include boxShadow;
@@ -25,10 +26,42 @@
   .navWrapper {
     border-radius: 5px 5px 0 0;
     grid-area: navWrapper;
-    border-bottom: 1px solid $borderColor;
+    // border-bottom: 1px solid $borderColor;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: $mainColor;
+    // background-color: $mainColor;
   }
+
+  .navWrapperLt {
+    @include navWrapper("lightMode");
+  }
+
+  .navWrapperBl {
+    @include navWrapper("blueMode");
+  }
+
+  .navWrapperGn {
+    @include navWrapper("greenMode");
+  }
+
+  .navWrapperPl {
+    @include navWrapper("purpleMode");
+  }
+}
+
+.infoWrapperLt {
+  @include infoWrapper("lightMode");
+}
+
+.infoWrapperBl {
+  @include infoWrapper("blueMode");
+}
+
+.infoWrapperGn {
+  @include infoWrapper("greenMode");
+}
+
+.infoWrapperPl {
+  @include infoWrapper("purpleMode");
 }
