--- a/components/project/Project.module.scss
+++ b/components/project/Project.module.scss
@@ -28,7 +28,7 @@
 
     &::-webkit-scrollbar {
       width: 8px;
-      background-color: $mainColor;
+      // background-color: $mainColor;
     }
 
     .projectDesc,
