--- a/components/sectionPortfolio/SectionPortfolio.module.scss
+++ b/components/sectionPortfolio/SectionPortfolio.module.scss
@@ -1,8 +1,8 @@
 @import "../../styles/variables.scss";
 
 section.s3 {
-  background-color: $mainColor;
-  border-bottom: 1px solid $borderColor;
+  // background-color: $mainColor;
+  // border-bottom: 1px solid $borderColor;
 
   h3 {
     padding-top: 2em;
