--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -164,7 +164,7 @@ h4,
 h5,
 h6,
 strong {
-  color: $mainText;
+  // color: $mainText;
   padding: 0.5em 0;
   font-family: "Russo One", sans-serif;
   font-weight: 500;
