--- a/components/carousel/Carousel.module.scss
+++ b/components/carousel/Carousel.module.scss
@@ -11,7 +11,7 @@
   .chevronRight {
     width: 300px;
     background-color: black;
-    color: $secondaryColor;
+    // color: $secondaryColor;
     cursor: pointer;
     border-radius: 50%;
     margin: 1em;
@@ -24,8 +24,8 @@
   .projectWrapper {
     display: flex;
     padding: 2em;
-    background-color: $secondaryColor;
-    border: 1px solid $borderColor;
+    // background-color: $secondaryColor;
+    // border: 1px solid $borderColor;
     border-radius: 5px;
   }
 }
