--- a/components/infoRightColumn/InfoRightColumn.module.scss
+++ b/components/infoRightColumn/InfoRightColumn.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles//mixins.scss";
 
 .rightColumn {
   grid-area: rightColumn;
@@ -10,53 +11,34 @@
     justify-content: center;
   }
 
-  #previewShadow {
-    background-color: $previewShadow;
-    width: 300px;
-    height: 180px;
-    padding-left: 30px;
-    padding-top: 30px;
+  #previewShadowLt {
+    @include previewShadow("lightMode");
   }
 
-  #preview {
-    width: 300px;
-    border: 1.5px solid #17a2b8;
-    background-color: $previewBg;
-    padding: 15px;
-    position: relative;
+  #previewShadowBl {
+    @include previewShadow("blueMode");
+  }
 
-    .corner {
-      width: 7px;
-      height: 7px;
-      border-radius: 50%;
-      border: 1.5px solid #17a2b8;
-      background-color: $secondaryColor;
-      position: absolute;
-    }
+  #previewShadowGn {
+    @include previewShadow("greenMode");
+  }
 
-    #cornerTl {
-      top: -5px;
-      left: -5px;
-    }
-    #cornerTr {
-      top: -5px;
-      right: -5px;
-    }
-    #cornerBr {
-      bottom: -5px;
-      right: -5px;
-    }
-    #cornerBl {
-      bottom: -5px;
-      left: -5px;
-    }
+  #previewShadowPl {
+    @include previewShadow("purpleMode");
+  }
 
-    h3 {
-      padding: 0.7em 0;
-    }
+  #previewLt {
+    @include preview("lightMode");
+  }
 
-    p {
-      padding: 1em 0;
-    }
+  #previewBl {
+    @include preview("blueMode");
+  }
+
+  #previewGn {
+    @include preview("greenMode");
+  }
+  #previewPl {
+    @include preview("purpleMode");
   }
 }
