--- a/components/sectionAbout/SectionAbout.module.scss
+++ b/components/sectionAbout/SectionAbout.module.scss
@@ -1,13 +1,25 @@
 @import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
 
-section.s2 {
-  background-color: $secondaryColor;
-  border-bottom: 1px solid $borderColor;
+.s2Lt {
+  @include s2("lightMode");
+}
 
-  .aboutWrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    padding: 50px 0;
-    gap: 100px;
-  }
+.s2Bl {
+  @include s2("blueMode");
+}
+
+.s2Gn {
+  @include s2("greenMode");
+}
+
+.s2Pl {
+  @include s2("purpleMode");
+}
+
+.aboutWrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding: 50px 0;
+  gap: 100px;
 }
