--- a/components/sectionContact/SectionContact.module.scss
+++ b/components/sectionContact/SectionContact.module.scss
@@ -4,8 +4,8 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  background-color: $secondaryColor;
-  border-bottom: 1px solid $borderColor;
+  // background-color: $secondaryColor;
+  // border-bottom: 1px solid $borderColor;
 
   h3 {
     text-align: center;
