--- a/components/social links/SocialLinks.module.scss
+++ b/components/social links/SocialLinks.module.scss
@@ -10,7 +10,7 @@
     display: block;
     width: 100%;
     object-fit: cover;
-    border: 1px solid $borderColor;
+    // border: 1px solid $borderColor;
   }
 
   h3 {
