--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -177,7 +177,7 @@ span,
 label,
 input,
 textarea {
-  color: $secondaryText;
+  // color: $secondaryText;
   font-size: 1em;
   font-family: "Roboto Mono", monospace;
   line-height: 1.5em;
