--- a/components/sectionContact/SectionContact.module.scss
+++ b/components/sectionContact/SectionContact.module.scss
@@ -1,14 +1,26 @@
 @import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
 
 .s4 {
   display: grid;
   justify-content: center;
   align-items: center;
-  // background-color: $secondaryColor;
-  // border-bottom: 1px solid $borderColor;
 
   h3 {
     text-align: center;
     padding: 2em;
   }
+}
+
+.s4Lt {
+  @include s4("lightMode");
+}
+.s4Bl {
+  @include s4("blueMode");
+}
+.s4Gn {
+  @include s4("greenMode");
+}
+.s4Pl {
+  @include s4("purpleMode");
 }
