--- a/components/contactForm/ContactForm.module.scss
+++ b/components/contactForm/ContactForm.module.scss
@@ -5,10 +5,7 @@
   display: block;
   max-width: 600px;
   margin: 0 auto;
-  // border: 1px solid $borderColor;
   padding: 15px;
-  border-radius: 5px;
-  // background-color: $mainColor;
   margin-bottom: 100px;
 
   label {
@@ -36,9 +33,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 15px 5px;
-    // background-color: $secondaryColor;
     border-radius: 5px;
-    // border: 1px solid $borderColor;
     font-size: 14px;
     margin: 0.5em 0;
   }
@@ -53,13 +48,8 @@
     width: 100%;
     padding: 10px 0;
     color: #fff;
-    // background-color: $buttonColor;
-    // border: none;
     border-radius: 5px;
-
-    // &:hover {
-    //   background-color: $themeDotBorder;
-    // }
+    cursor: pointer;
   }
 
   .btnLt {
