added media queries for mobile view in project section

--- a/components/carousel/Carousel.module.scss
+++ b/components/carousel/Carousel.module.scss
@@ -8,6 +8,10 @@
   margin-top: 2em;
   margin-bottom: 4em;
 
+  @media screen and (max-width: $mobileView) {
+    flex-direction: column;
+  }
+
   .chevronLeft,
   .chevronRight {
     width: 5em;
