--- a/components/project/Project.module.scss
+++ b/components/project/Project.module.scss
@@ -6,11 +6,19 @@
   grid-template-columns: 1fr 1fr;
   gap: 50px;
 
+  @media screen and (max-width: $mobileView) {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
   .projectMain {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+
+    @media screen and (max-width: $mobileView) {
+      // height: 350px;
+    }
 
     h4 {
       text-decoration: underline;
@@ -18,6 +26,11 @@
 
     img {
       width: 450px;
+      margin: 2em 0;
+
+      @media screen and (max-width: $mobileView) {
+        width: 100%;
+      }
     }
   }
 
@@ -26,6 +39,11 @@
     height: 450px;
     overflow-y: scroll;
     padding: 1.3em;
+
+    @media screen and (max-width: $mobileView) {
+      width: 100%;
+      height: 100%;
+    }
 
     &::-webkit-scrollbar {
       width: 8px;
