--- a/components/carousel/Carousel.module.scss
+++ b/components/carousel/Carousel.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   margin-top: 2em;
   margin-bottom: 4em;
+  width: 100%;
 
   @media screen and (max-width: $mobileView) {
     flex-direction: column;
@@ -14,7 +15,7 @@
 
   .chevronLeft,
   .chevronRight {
-    width: 5em;
+    width: 50px;
     cursor: pointer;
     border-radius: 50%;
     margin: 1em;
