--- a/components/sectionAbout/SectionAbout.module.scss
+++ b/components/sectionAbout/SectionAbout.module.scss
@@ -22,4 +22,9 @@
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   padding: 50px 0;
   gap: 100px;
+
+  @media screen and (min-width: 1800px) {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
 }
