--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -191,11 +191,12 @@ textarea {
 
 // Global container styles
 .main-container {
-  width: 1200px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
-
   @media screen and (max-width: $mobileView) {
     width: 95%;
+    height: auto;
   }
 
   @media screen and (min-width: 1800px) {
