--- a/styles/Carousel.module.scss
+++ b/styles/Carousel.module.scss
@@ -10,6 +10,10 @@
   margin: 0 auto;
   border-radius: 10px;
   padding: 5em;
+
+  @media screen and (max-width: $mobileView) {
+    padding: 1em;
+  }
 }
 
 .projectWrapperLt {
