--- a/styles/Carousel.module.scss
+++ b/styles/Carousel.module.scss
@@ -5,14 +5,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 60%;
-  margin: 0 auto;
-  border-radius: 10px;
-  padding: 5em;
+  width: 100%;
+  // margin: 0 auto;
+  // padding: 5em;
 
   @media screen and (max-width: $mobileView) {
-    padding: 1em;
+    // padding: 1em;
+    width: 95%;
   }
 }
 
