--- a/styles/SectionPortfolio.module.scss
+++ b/styles/SectionPortfolio.module.scss
@@ -6,8 +6,12 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
+  // width: 100%;
   height: 100%;
+
+  @media screen and (max-width: $mobileView) {
+    // height: 100%;
+  }
 }
 
 .s3Lt {
