--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -187,6 +187,10 @@ textarea {
 .s3,
 .s4 {
   overflow: auto;
+
+  @media screen and (max-width: $mobileView) {
+    overflow-x: hidden;
+  }
 }
 
 // Global container styles
