created components for project desc and tech stack details also a toggle method with a view/hide button for mobile view

--- a/styles/AboutMe.module.scss
+++ b/styles/AboutMe.module.scss
@@ -1,8 +1,12 @@
-.aboutMe h4 {
-  padding-bottom: 0.5em 0;
+.aboutMe {
+  h4 {
+    padding-bottom: 0.5em 0;
+  }
 }
 
-.aboutMe p {
-  padding: 0.7em 0;
-  line-height: 1.7em;
+.aboutMe {
+  p {
+    padding: 0.7em 0;
+    line-height: 1.7em;
+  }
 }
