--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -2,21 +2,28 @@
 @import "./mixins.scss";
 
 .project {
-  display: flex;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // border: 1px solid lightgrey;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  padding: 2.5em;
+  box-sizing: border-box;
 
   @media screen and (max-width: $mobileView) {
-    flex-direction: column;
+    padding: 0;
+    grid-template-columns: 1fr;
   }
   .projectMain {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 2em;
+
     h4 {
       text-decoration: underline;
 
@@ -44,12 +51,32 @@
   .projectAbout {
     padding: 2em;
 
-    .projectDesc,
-    .techStack {
-      padding-top: 1em;
-
+    .headingWrapper {
       @media screen and (max-width: $mobileView) {
-        padding: 0.5em 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+      }
+
+      .heading {
+        padding-top: 1em;
+
+        @media screen and (max-width: $mobileView) {
+          padding: 1em 0;
+        }
+
+        .btn {
+          justify-self: flex-end;
+        }
+      }
+      .toggle {
+        display: none;
+
+        @media screen and (max-width: $mobileView) {
+          display: block;
+          color: #17a2b8;
+        }
       }
     }
 
@@ -77,23 +104,19 @@
     }
   }
 
-  .projectLt {
+  .lightMode {
     @include project("lightMode");
-    @include scrollbar("lightMode");
   }
 
-  .projectBl {
+  .blueMode {
     @include project("blueMode");
-    @include scrollbar("blueMode");
   }
 
-  .projectGn {
+  .greenMode {
     @include project("greenMode");
-    @include scrollbar("greenMode");
   }
 
-  .projectPl {
+  .purpleMode {
     @include project("purpleMode");
-    @include scrollbar("purpleMode");
   }
 }
