--- a/styles/SectionAbout.module.scss
+++ b/styles/SectionAbout.module.scss
@@ -1,20 +1,35 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 
-.s2Lt {
-  @include s2("lightMode");
+.lightMode {
+  @include sectionAbout("lightMode");
 }
 
-.s2Bl {
-  @include s2("blueMode");
+.blueMode {
+  @include sectionAbout("blueMode");
 }
 
-.s2Gn {
-  @include s2("greenMode");
+.greenMode {
+  @include sectionAbout("greenMode");
 }
 
-.s2Pl {
-  @include s2("purpleMode");
+.purpleMode {
+  @include sectionAbout("purpleMode");
+}
+
+.mainContainer {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  @media screen and (max-width: $mobileView) {
+    width: 95%;
+    height: 100%;
+    overflow-x: hidden;
+  }
+
+  @media screen and (min-width: 1800px) {
+    width: 70%;
+  }
 }
 
 .aboutWrapper {
