--- a/styles/SectionContact.module.scss
+++ b/styles/SectionContact.module.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 
-.s4 {
+.sectionContact {
   display: grid;
   justify-content: center;
   align-items: center;
@@ -12,15 +12,30 @@
   }
 }
 
-.s4Lt {
-  @include s4("lightMode");
+.lightMode {
+  @include sectionContact("lightMode");
 }
-.s4Bl {
-  @include s4("blueMode");
+.blueMode {
+  @include sectionContact("blueMode");
 }
-.s4Gn {
-  @include s4("greenMode");
+.greenMode {
+  @include sectionContact("greenMode");
 }
-.s4Pl {
-  @include s4("purpleMode");
+.purpleMode {
+  @include sectionContact("purpleMode");
+}
+
+.mainContainer {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  @media screen and (max-width: $mobileView) {
+    width: 95%;
+    height: 100%;
+    overflow-x: hidden;
+  }
+
+  @media screen and (min-width: 1800px) {
+    width: 70%;
+  }
 }
