--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -182,30 +182,11 @@ textarea {
 }
 
 // Global section styles
-.s1,
-.s2,
-.s3,
-.s4 {
+.section {
   overflow: auto;
 
   @media screen and (max-width: $mobileView) {
     overflow-x: hidden;
-  }
-}
-
-// Global container styles
-.main-container {
-  width: 100%;
-  height: 100vh;
-  margin: 0 auto;
-  @media screen and (max-width: $mobileView) {
-    width: 95%;
-    height: 100%;
-    overflow-x: hidden;
-  }
-
-  @media screen and (min-width: 1800px) {
-    width: 70%;
   }
 }
 
