--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -2,10 +2,6 @@
 @import "./mixins.scss";
 
 .project {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // border: 1px solid lightgrey;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: center;
@@ -16,6 +12,7 @@
 
   @media screen and (max-width: $mobileView) {
     padding: 0;
+    margin-bottom: 2em;
     grid-template-columns: 1fr;
   }
   .projectMain {
