--- a/styles/SectionAbout.module.scss
+++ b/styles/SectionAbout.module.scss
@@ -19,12 +19,13 @@
 
 .mainContainer {
   width: 100%;
-  height: 100vh;
+  height: auto;
   margin: 0 auto;
+
   @media screen and (max-width: $mobileView) {
     width: 95%;
     height: 100%;
-    overflow-x: hidden;
+    padding: 1em 0;
   }
 
   @media screen and (min-width: 1800px) {
@@ -37,6 +38,11 @@
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   padding: 50px 0;
   gap: 100px;
+
+  @media screen and (max-width: $mobileView) {
+    padding: 0;
+    gap: 20px;
+  }
 
   @media screen and (min-width: 1800px) {
     padding-left: 100px;
