--- a/styles/SocialLinks.module.scss
+++ b/styles/SocialLinks.module.scss
@@ -7,6 +7,10 @@
   text-align: center;
   padding-bottom: 4em;
 
+  @media screen and (max-width: $mobileView) {
+    padding-bottom: 0;
+  }
+
   @media screen and (min-width: 1800px) {
     align-items: center;
   }
