--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,8 +1,21 @@
 @use "sass:map";
+
 @mixin boxShadow {
   -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+}
+
+@mixin scrollbar($themeName) {
+  ::-webkit-scrollbar {
+    width: 10rem;
+  }
+  // ::-webkit-scrollbar-track {
+  //   width: 2rem;
+  // }
+  // ::-webkit-scrollbar-thumb {
+  //   width: 2rem;
+  // }
 }
 
 @mixin sectionMain($themeName) {
@@ -15,12 +28,12 @@
   }
 }
 
-@mixin infoWrapper($themeName) {
+@mixin hero($themeName) {
   background-color: map.get($secondaryColorTest, $themeName);
   border: 1px solid map.get($borderColorTest, $themeName);
 }
 
-@mixin navWrapper($themeName) {
+@mixin nav($themeName) {
   background-color: map.get($mainColorTest, $themeName);
   border-bottom: 1px solid map.get($borderColorTest, $themeName);
 }
@@ -150,7 +163,6 @@
 
 @mixin projectWrapper($themeName) {
   background-color: map.get($mainColorTest, $themeName);
-  // border: 1px solid map.get($borderColorTest, $themeName);
 }
 
 @mixin project($themeName) {
