--- a/styles/SectionPortfolio.module.scss
+++ b/styles/SectionPortfolio.module.scss
@@ -6,12 +6,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  // width: 100%;
   height: 100%;
-
-  @media screen and (max-width: $mobileView) {
-    // height: 100%;
-  }
 }
 
 .lightMode {
@@ -29,6 +24,7 @@
 
 .mainContainer {
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
   @media screen and (max-width: $mobileView) {
     width: 95%;
