--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -18,26 +18,29 @@
   .projectMain {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
+    height: 100%;
 
     h4 {
       text-decoration: underline;
-
+      padding: 0;
       @media screen and (max-width: $mobileView) {
         margin: 0.5em 0;
         padding: 0;
       }
     }
 
-    img {
-      width: 450px;
-      height: 350px;
-      margin: 2em 0;
-
-      @media screen and (max-width: $mobileView) {
+    .projectLink {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      img {
         width: 100%;
-        margin: 0.5em 0;
+
+        @media screen and (max-width: $mobileView) {
+          width: 100%;
+        }
       }
     }
 
