--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -6,7 +6,6 @@
   grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
-  width: 100%;
   padding: 2.5em;
   box-sizing: border-box;
 
@@ -34,7 +33,7 @@
     .projectLink {
       display: flex;
       justify-content: center;
-      width: 100%;
+
       img {
         width: 100%;
 
@@ -50,6 +49,9 @@
   }
 
   .projectAbout {
+    height: 450px;
+    overflow-y: auto;
+    box-sizing: border-box;
     padding: 2em;
 
     .headingWrapper {
@@ -107,6 +109,22 @@
       margin: 1em 0;
       padding: 0 2.5em;
     }
+  }
+
+  .projectAbout::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 10px;
+  }
+
+  .projectAbout::-webkit-scrollbar-track {
+    background-color: darkgray;
+    border-radius: 10px;
+    margin: 3px 0;
+  }
+
+  .projectAbout::-webkit-scrollbar-thumb {
+    background-color: black;
+    border-radius: 10px;
   }
 
   .showDetails {
